--- a/pages/phase_one.html
+++ b/pages/phase_one.html
@@ -11,11 +11,16 @@
   </head>
 
   <body class="bg-dark">
-    <section id="initial-screen" class="d-block vw-100 position-absolute">
-      <div
-        class="d-flex justify-content-center align-items-center vw-100 vh-100"
-      >
-        <button data-start-game class="btn btn-primary btn-sm">
+    <section id="initial-screen" class="d-block w-100 position-absolute">
+      <div class="d-flex justify-content-center align-items-center vh-100">
+        <button
+          data-start-game-desktop
+          class="btn btn-primary d-sm-none d-lg-inline"
+        >
+          Começar jogo
+        </button>
+
+        <button data-start-game-mobile class="btn btn-primary btn-sm d-lg-none">
           Começar jogo
         </button>
       </div>
@@ -64,11 +69,22 @@
 
         <div class="d-block p-3 text-end">
           <button
-            data-show-question
+            data-show-question-desktop
             type="button"
-            class="btn btn-info btn-sm"
+            class="btn btn-info d-sm-none d-lg-inline"
             data-bs-toggle="modal"
-            data-bs-target="#question"
+            data-bs-target="#question-desktop"
+            disabled
+          >
+            Mostrar pergunta
+          </button>
+
+          <button
+            data-show-question-mobile
+            type="button"
+            class="btn btn-info btn-sm d-lg-none d-sm-inline"
+            data-bs-toggle="modal"
+            data-bs-target="#question-mobile"
             disabled
           >
             Mostrar pergunta
@@ -129,8 +145,8 @@
           <p class="text-center fw-bold">v = 10m/s</p>
         </div>
 
-        <!-- Modal para mostrar a questão -->
-        <div data-question id="question" class="modal fade">
+        <!-- Modal para mostrar a questão (mobile)-->
+        <div id="question-mobile" class="modal fade">
           <div class="modal-dialog modal-sm modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
@@ -173,7 +189,7 @@
 
               <div class="modal-footer">
                 <button
-                  data-submit-answer
+                  data-submit-answer-mobile
                   type="button"
                   class="btn btn-success btn-sm"
                   data-bs-dismiss="modal"
@@ -195,19 +211,13 @@
           </div>
         </div>
 
-        <!-- Modal para informar uma nova tentativa -->
-        <div
-          id="gameOverModal"
-          class="modal fade"
-          tabindex="-1"
-          role="dialog"
-          aria-labelledby="modalLabel"
-          aria-hidden="true"
-        >
-          <div class="modal-dialog" role="document">
+        <!-- Modal para mostrar a questão (desktop)-->
+        <div id="question-desktop" class="modal fade">
+          <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel">Resposta errado</h5>
+                Como base no percurso dos dois Tatu é possível concluir que a
+                trajetoria que representa o Movimento Retilíneo Uniforme é:
                 <button
                   type="button"
                   class="btn-close"
@@ -215,26 +225,94 @@
                   aria-label="Fechar"
                 ></button>
               </div>
+
               <div class="modal-body">
-                <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
+                <div class="form-check">
+                  <input
+                    type="radio"
+                    class="form-check-input"
+                    id="radio-three"
+                    name="option"
+                  />
+                  <label class="form-check-label" for="radio-three">
+                    A trajetória de baixo.
+                  </label>
+                </div>
+
+                <div class="form-check">
+                  <input
+                    type="radio"
+                    class="form-check-input"
+                    id="radio-four"
+                    name="option"
+                    autocomplete="off"
+                  />
+                  <label class="form-check-label" for="radio-four">
+                    A trajetória de cima.
+                  </label>
+                </div>
               </div>
+
               <div class="modal-footer">
                 <button
-                  data-reset
+                  data-submit-answer-desktop
+                  type="button"
+                  class="btn btn-success"
+                  data-bs-dismiss="modal"
+                  disabled
+                >
+                  Confirmar
+                </button>
+
+                <button
+                  type="button"
                   class="btn btn-danger"
                   data-bs-dismiss="modal"
+                  aria-label="Fechar"
                 >
                   Fechar
-                  <i class="bi bi-pause"></i>
                 </button>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Modal para próxima fase -->
+        <!-- Modal para próxima fase (mobile) -->
         <div
-          id="nextPhaseModal"
+          id="next-phase-modal-mobile"
+          class="modal fade"
+          data-bs-backdrop="static"
+          data-bs-keyboard="false"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="modalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
+              </div>
+              <div class="modal-body">
+                <p class="textWin">
+                  Parabéns por completar o desafio! Siga para a próxima fase
+                </p>
+
+                <a
+                  href="./phase_two.html"
+                  role="button"
+                  class="btn btn-primary btn-sm"
+                >
+                  Próxima fase
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal para próxima fase (desktop) -->
+        <div
+          id="next-phase-modal-desktop"
           class="modal fade"
           data-bs-backdrop="static"
           data-bs-keyboard="false"
@@ -265,9 +343,43 @@
           </div>
         </div>
 
-        <!-- Modal para mostrar que o tempo acabou -->
+        <!-- Modal para mostrar que o tempo acabou (mobile) -->
         <div
-          id="timeOverModal"
+          id="time-over-modal-mobile"
+          class="modal fade"
+          data-bs-backdrop="static"
+          data-bs-keyboard="false"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="modalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLabel">Tempo esgotado</h5>
+              </div>
+              <div class="modal-body">
+                <p class="textWin">
+                  Infelizmente o tempo acabou! Siga para o próximo desafio.
+                </p>
+              </div>
+              <div class="modal-footer">
+                <a
+                  href="./phase_two.html"
+                  role="button"
+                  class="btn btn-secondary btn-sm"
+                >
+                  Próxima fase
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal para mostrar que o tempo acabou (desktop) -->
+        <div
+          id="time-over-modal-desktop"
           class="modal fade"
           data-bs-backdrop="static"
           data-bs-keyboard="false"
@@ -294,6 +406,80 @@
                 >
                   Próxima fase
                 </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal para informar uma nova tentativa (mobile)-->
+        <div
+          id="game-over-modal-mobile"
+          class="modal fade"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="modalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Resposta errada</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Fechar"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
+              </div>
+              <div class="modal-footer">
+                <button
+                  data-reset
+                  class="btn btn-danger btn-sm"
+                  data-bs-dismiss="modal"
+                >
+                  Fechar
+                  <i class="bi bi-pause"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal para informar uma nova tentativa (desktop) -->
+        <div
+          id="game-over-modal-desktop"
+          class="modal fade"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="modalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLabel">Resposta errada</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Fechar"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
+              </div>
+              <div class="modal-footer">
+                <button
+                  data-reset
+                  class="btn btn-danger"
+                  data-bs-dismiss="modal"
+                >
+                  Fechar
+                  <i class="bi bi-pause"></i>
+                </button>
               </div>
             </div>
           </div>
