--- a/pages/phase_two.html
+++ b/pages/phase_two.html
@@ -390,9 +390,46 @@
           </div>
         </div>
 
-        <!-- Modal para informar uma nova tentativa -->
+        <!-- Modal para informar uma nova tentativa (mobile)-->
         <div
-          id="gameOverModal"
+          id="game-over-modal-mobile"
+          class="modal fade"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="modalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Resposta errada</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Fechar"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <p class="textWin">Não foi dessa vez! Tente Novamente.</p>
+              </div>
+              <div class="modal-footer">
+                <button
+                  data-reset
+                  class="btn btn-danger btn-sm"
+                  data-bs-dismiss="modal"
+                >
+                  Fechar
+                  <i class="bi bi-pause"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Modal para informar uma nova tentativa (desktop) -->
+        <div
+          id="game-over-modal-desktop"
           class="modal fade"
           tabindex="-1"
           role="dialog"
@@ -402,7 +439,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel">Resposta errado</h5>
+                <h5 class="modal-title" id="modalLabel">Resposta errada</h5>
                 <button
                   type="button"
                   class="btn-close"
