renomeação dos arquivos

--- a/pages/phase_03_pre_test.html
+++ b/pages/phase_03_pre_test.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fase III - Cinemática</title>
-    <link rel="stylesheet" href="../src/css/phase_three.css" />
+    <link rel="stylesheet" href="../src/css/phase_03_pre_test.css" />
     <link rel="stylesheet" href="../src/css/bootstrap.css" />
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
@@ -279,7 +279,7 @@
                 </p>
 
                 <a
-                  href="./phase_four.html"
+                  href="./phase_04_main.html"
                   role="button"
                   class="btn btn-primary btn-sm"
                   >Próxima fase</a
@@ -311,7 +311,7 @@
                 </p>
 
                 <a
-                  href="./phase_four.html"
+                  href="./phase_04_main.html"
                   role="button"
                   class="btn btn-primary"
                   >Próxima fase</a
@@ -344,7 +344,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_four.html"
+                  href="./phase_04_main.html"
                   role="button"
                   class="btn btn-secondary btn-sm"
                 >
@@ -378,7 +378,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_four.html"
+                  href="./phase_04_main.html"
                   role="button"
                   class="btn btn-secondary"
                 >
@@ -465,7 +465,7 @@
       </main>
     </section>
 
-    <script type="module" src="../src/js/phase_three.js"></script>
+    <script type="module" src="../src/js/phase_03_pre_test.js"></script>
     <script src="../src/js/bootstrap.min.js"></script>
   </body>
 </html>
