--- a/pages/phase_03.html
+++ b/pages/phase_03.html
@@ -90,29 +90,38 @@
           </button>
         </div>
 
-        <div data-armadillo id="armadillo" class="armadillo position-absolute">
-          <p data-time-text class="text-center mb-0 fw-bold">t = 0</p>
-          <p data-text-postion class="text-center fw-bold">0m</p>
+        <!-- MRU -->
+        <div data-armadillo class="object position-absolute">
+          <div id="armadillo" class="armadillo">
+            <p data-time-text class="text-center mb-0 fw-bold">
+              <span data-time-text>t = 0s</span> <br />
+              0m
+            </p>
+          </div>
         </div>
 
-        <div class="armadillo position-absolute">
-          <p class="text-center mb-0 fw-bold">t = 0</p>
-          <p class="text-center fw-bold">0m</p>
+        <div class="object position-absolute">
+          <div class="armadillo">
+            <p class="text-center mb-0 fw-bold">t = 0s <br />0m</p>
+          </div>
         </div>
 
-        <div class="armadillo position-absolute d-none">
-          <p class="text-center mb-0 fw-bold">t = 1</p>
-          <p class="text-center fw-bold">5m</p>
+        <div class="object position-absolute d-none">
+          <div class="armadillo">
+            <p class="text-center mb-0 fw-bold">t = 1s <br />5m</p>
+          </div>
         </div>
 
-        <div class="armadillo position-absolute d-none">
-          <p class="text-center mb-0 fw-bold">t = 2</p>
-          <p class="text-center fw-bold">10m</p>
+        <div class="object position-absolute d-none">
+          <div class="armadillo">
+            <p class="text-center mb-0 fw-bold">t = 2s <br />10m</p>
+          </div>
         </div>
 
-        <div class="armadillo position-absolute d-none">
-          <p class="text-center mb-0 fw-bold">t = 3</p>
-          <p class="text-center fw-bold">15m</p>
+        <div class="object position-absolute d-none">
+          <div class="armadillo">
+            <p class="text-center mb-0 fw-bold">t = 3s <br />15m</p>
+          </div>
         </div>
 
         <!-- Modal para mostrar a questão (mobile) -->
