--- a/pages/phase_07.html
+++ b/pages/phase_07.html
@@ -90,29 +90,38 @@
           </button>
         </div>
 
-        <div data-armadillo id="armadillo" class="armadillo position-absolute">
-          <p data-time-text class="text-center mb-0 fw-bold">t = 0</p>
-          <p data-text-postion class="text-center fw-bold">v = 7m/s</p>
+        <!-- MRU -->
+        <div data-armadillo class="object position-absolute">
+          <div id="armadillo" class="armadillo">
+            <p data-time-text class="text-center mb-0 fw-bold">
+              <span data-time-text>t = 0s</span> <br />
+              v = 7m/s
+            </p>
+          </div>
         </div>
 
-        <div class="armadillo position-absolute">
-          <p class="text-center mb-0 fw-bold">t = 0</p>
-          <p class="text-center fw-bold">v = 7m/s</p>
+        <div class="object position-absolute">
+          <div class="armadillo">
+            <p class="text-center mb-0 fw-bold">t = 0s <br />v = 7m/s</p>
+          </div>
         </div>
 
-        <div class="armadillo position-absolute d-none">
-          <p class="text-center mb-0 fw-bold">t = 1</p>
-          <p class="text-center fw-bold">v = 7m/s</p>
+        <div class="object position-absolute d-none">
+          <div class="armadillo">
+            <p class="text-center mb-0 fw-bold">t = 1s <br />v = 7m/s</p>
+          </div>
         </div>
 
-        <div class="armadillo position-absolute d-none">
-          <p class="text-center mb-0 fw-bold">t = 2</p>
-          <p class="text-center fw-bold">v = 7m/s</p>
+        <div class="object position-absolute d-none">
+          <div class="armadillo">
+            <p class="text-center mb-0 fw-bold">t = 2s <br />v = 7m/s</p>
+          </div>
         </div>
 
-        <div class="armadillo position-absolute d-none">
-          <p class="text-center mb-0 fw-bold">t = 3</p>
-          <p class="text-center fw-bold">v = 7m/s</p>
+        <div class="object position-absolute d-none">
+          <div class="armadillo">
+            <p class="text-center mb-0 fw-bold">t = 3s <br />v = 7m/</p>
+          </div>
         </div>
 
         <!-- Modal para mostrar a questão (mobile) -->
@@ -310,10 +319,7 @@
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
 
-                <a
-                  href="./phase_04.html"
-                  role="button"
-                  class="btn btn-primary"
+                <a href="./phase_04.html" role="button" class="btn btn-primary"
                   >Próxima fase</a
                 >
               </div>
