--- a/pages/phase_02.html
+++ b/pages/phase_02.html
@@ -445,7 +445,7 @@
               </div>
               <div class="modal-footer">
                 <a
-                  href="./phase_03.html"
+                  href="./phase_02.html"
                   role="button"
                   class="btn btn-danger btn-sm"
                 >
@@ -479,7 +479,7 @@
               </div>
               <div class="modal-body">
                 <p class="textWin">
-                  Não foi dessa vez! Siga para o próximo desafio.
+                  Não foi dessa vez! Siga para o próxima desafio.
                 </p>
               </div>
               <div class="modal-footer">
