--- a/pages/phase_06.html
+++ b/pages/phase_06.html
@@ -81,7 +81,7 @@
           <button
             data-show-question-desktop
             type="button"
-            class="btn btn-info d-sm-none"
+            class="btn btn-info d-sm-none d-lg-inline"
             data-bs-toggle="modal"
             data-bs-target="#question-desktop"
             disabled
