correção do link

--- a/pages/phase_07.html
+++ b/pages/phase_07.html
@@ -283,18 +283,7 @@
                 <h5 class="modal-title" id="modalLabel">Tempo esgotado</h5>
               </div>
               <div class="modal-body">
-                <p class="textWin">
-                  Infelizmente o tempo acabou! Siga para o próximo desafio.
-                </p>
-              </div>
-              <div class="modal-footer">
-                <a
-                  href="./phase_04.html"
-                  role="button"
-                  class="btn btn-secondary btn-sm"
-                >
-                  Próxima fase
-                </a>
+                <p class="textWin">Infelizmente o tempo acabou!</p>
               </div>
             </div>
           </div>
@@ -317,18 +306,7 @@
                 <h5 class="modal-title" id="modalLabel">Tempo esgotado</h5>
               </div>
               <div class="modal-body">
-                <p class="textWin">
-                  Infelizmente o tempo acabou! Siga para o próximo desafio.
-                </p>
-              </div>
-              <div class="modal-footer">
-                <a
-                  href="./phase_04.html"
-                  role="button"
-                  class="btn btn-secondary"
-                >
-                  Próxima fase
-                </a>
+                <p class="textWin">Infelizmente o tempo acabou!</p>
               </div>
             </div>
           </div>
