bug do timer resolvido

--- a/pages/phase_main_01.html
+++ b/pages/phase_main_01.html
@@ -370,7 +370,7 @@
               </div>
               <div class="modal-body">
                 <p class="textWin fs-6">
-                  Infelizmente o tempo acabou! Siga para o próximo desafio.
+                  Infelizmente o tempo acabou! Siga para o próxima fase.
                 </p>
               </div>
               <div class="modal-footer">
