--- a/pages/phase_05.html
+++ b/pages/phase_05.html
@@ -169,7 +169,7 @@
 
           <!-- Modal para mostrar a questão (mobile)-->
           <div id="question-mobile" class="modal fade">
-            <div class="modal-dialog modal-sm modal-dialog-scrollable">
+            <div class="modal-dialog modal-lg modal-dialog-scrollable">
               <div class="modal-content">
                 <div class="modal-header">
                   Como base no percurso dos dois Tatu é possível concluir que a
