--- a/pages/phase_07.html
+++ b/pages/phase_07.html
@@ -129,7 +129,7 @@
           <div class="modal-dialog modal-sm modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <p>Com base na trajetória do Tatu, qual é a sua velocidade?</p>
+                <p>Com base na trajetória do Tatu, qual é a sua posição final?</p>
                 <button
                   type="button"
                   class="btn btn-close btn-sm"
