--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <a
               data-start-game
-              href="./pages/phase_01.html"
+              href="#"
               role="button"
               class="btn btn-primary disabled"
             >
